post: project-Input Component

--- a/_posts/2022/2022-01-11-Project_개발 환경 구축.md
+++ b/_posts/2022/2022-01-11-Project_개발 환경 구축.md
@@ -9,43 +9,6 @@ sidebar:
   nav: "docs"
 ---
 
-module.exports = {
-env: {
-browser: true,
-es2021: true,
-node: true,
-},
-parserOptions: {
-ecmaVersion: 12,
-sourceType: 'module',
-},
-extends: ['eslint:recommended', 'plugin:react/recommended', 'prettier'], // airbnb
-plugins: ['react', 'prettier'],
-rules: {
-// 'linebreak-style': 0,
-// 'react/jsx-filename-extension': [1, { extensions: ['.js', '.jsx'] }],
-// 'arrow-body-style': 0,
-// 'react/function-component-definition': [
-// 2,
-// {
-// namedComponents: [
-// 'function-declaration',
-// 'function-expression',
-// 'arrow-function',
-// ],
-// },
-// ],
-},
-}
-
-// 'prettier/prettier': 'error',
-// 'no-unused-vars': 'warn',
-// 'no-console': 'off',
-// 'func-names': 'off',
-// 'no-process-exit': 'off',
-// 'object-shorthand': 'off',
-// 'class-methods-use-this': 'off',
-
 # Project
 
 **팀 프로젝트 개발 환경 구축**
@@ -160,4 +123,37 @@ webpack과 bable 설정으로 react app을 구축하려고 했다.
 
 하루에 한 번씩은 코드 리뷰를 하고 머지할 예정이다.
 
-#### Input
+#### Git 컨벤션 설정
+
+- Convention Type
+
+  | icon                 | 유형            | 설명                                |
+  | -------------------- | --------------- | ----------------------------------- |
+  | ✨ :sparkles:        | Feat            | 새로운 기능 추가                    |
+  | ➕ :heavy_plus_sign: | Add             | 파일추가(이미지, 아이콘, 폰트...)   |
+  | 🐛 :bug:             | Fix             | 버그 수정                           |
+  | 📝 :memo:            | Docs            | 문서 수정                           |
+  | 💄 :lipstick:        | Style           | 스타일(CSS, 퍼블, UI적인 요소) 수정 |
+  | 💡 :bulb:            | Comment         | 주석 추가, 수정, 삭제               |
+  | 📦️ :package:        | Chore           | 빌드업 업무, 패키지 매니저 수정     |
+  | ♻️ :recycle:         | Refactor        | 수정                                |
+  | 🚚 :truck:           | Rename          | 변수명, 함수명, 파일명, 폴더명 변경 |
+  | 🔥 :fire:            | Remove          | 변수, 함수, 기능, 파일, 폴더 삭제   |
+  | 💥 :boom:            | !BREAKINGCHANGE | 큰 api 변경, 큰 구조적인 변경       |
+  | 🚑️ :rotating_light: | !HOTFIX         | 급한 치명적인 버그 수정             |
+  | 🚀 :rocket:          | Deploy          | 배포                                |
+
+- branch convention
+
+  각자 이름으로 사용
+
+- git commit convention
+
+  gitmoji --commit
+
+  이모지 선택
+
+  title: Input 컴포넌트 추가
+
+  TextInput 추가
+  <br>FileInput 추가
