post: React - MobX

--- a/_posts/2021/2021-11-30-TIL_데이터 타입.md
+++ b/_posts/2021/2021-11-30-TIL_데이터 타입.md
@@ -236,10 +236,11 @@ export default class Welcome extends Component {
     let sec = time?.getSeconds() ?? 0; // 이것과 같다.
     // const num = sec >= 30 ? sec - 30 : sec;
 
-    // {{ color: `${colors[num / 5]}` }}
+    // {\{ color: `${colors[num / 5]}` }\}
     // {/* or (num/5) % 6 */}
+    const styles = { color: `${colors[(sec / 5) % 6]}` };
     return isFive ? (
-      <div style={{ color: `${colors[(sec / 5) % 6]}` }}>
+      <div style={styles}>
         <h1>Hello CodeSandbox</h1>
         <h2>Start editing to see some magic happen!</h2>
       </div>
