post: article move done

--- a/_posts/2021/2021-11-27-TIL_브라우저 관련 지식.md
+++ b/_posts/2021/2021-11-27-TIL_브라우저 관련 지식.md
@@ -2,7 +2,7 @@
 layout: single
 title: "[TIL] 브라우저 관련 지식"
 categories: web
-tag: [TIL, 브라우저]
+tag: [TIL, 브라우저, 쿠키, 세션, 캐시]
 toc: true
 author_profile: true
 sidebar:
