--- a/_posts/2021/2021-11-30-TIL_데이터 타입.md
+++ b/_posts/2021/2021-11-30-TIL_데이터 타입.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[TIL] Javascript 데이터 타입과 React 레슨 정리"
-categories: web
+categories: Javascript
 tag: [TIL, Javascript, 데이터 타입]
 toc: true
 author_profile: true
