--- a/_posts/2021/2021-12-01-TIL_상태관리 라이브러리.md
+++ b/_posts/2021/2021-12-01-TIL_상태관리 라이브러리.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[TIL] React 상태관리 라이브러리"
-categories: web
+categories: React
 tag: [TIL, React, 상태관리 라이브러리, Redux, MobX, Context API, Recoil]
 toc: true
 author_profile: true
@@ -111,6 +111,7 @@ sidebar:
   <br>예제)
 
   - mobX store
+
     ```jsx
     import { observable } from "mobx";
 
@@ -128,8 +129,10 @@ sidebar:
 
     export default new CounterStore();
     ```
+
   - 컴포넌트에서 mobX Store 사용
-    ```jsx
+
+    ````jsx
     import React from 'react';
     import {observer} from 'mobx-react';
     import store from './store.js';
@@ -145,6 +148,7 @@ sidebar:
         ```
     redux에서 처럼 컴포넌트와 state를 연결하는 일련의 작업(mapDispatchToProps, mapStateToProps / react-redux의 hook을 이용한 작업 등)을 해주지 않고 이렇게 간단하게 구현할 수 있다.
     <br>redux에서 처럼 State의 불변성 유지를 위해 노력하지 않아도 된다.
+    ````
 
 - 단점
 
@@ -171,10 +175,4 @@ redux와는 달리 상태 변경이 가능하므로 위험할 수 있다.
 
 [참고 및 출처]
 
-> https://velog.io/@mementomori/React-%EC%83%81%ED%83%9C-%EA%B4%80%EB%A6%AC-Tool-%EC%82%AC%EC%9A%A9-%EB%B9%84%EA%B5%90-Redux-VS-MobX-VS-Context-API
-> https://velopert.com/3528
-> https://egg-programmer.tistory.com/281
-> https://velog.io/@cada/React-Redux-vs-Context-API#context
-> https://lannex.github.io/blog/2020/redux-mobx/
-> https://boxfoxs.tistory.com/383
-> https://ykss.netlify.app/react/redux_mobx_recoil/
+> https://velog.io/@mementomori/React-%EC%83%81%ED%83%9C-%EA%B4%80%EB%A6%AC-Tool-%EC%82%AC%EC%9A%A9-%EB%B9%84%EA%B5%90-Redux-VS-MobX-VS-Context-API > https://velopert.com/3528 > https://egg-programmer.tistory.com/281 > https://velog.io/@cada/React-Redux-vs-Context-API#context > https://lannex.github.io/blog/2020/redux-mobx/ > https://boxfoxs.tistory.com/383 > https://ykss.netlify.app/react/redux_mobx_recoil/
