--- a/_posts/2021/2021-12-05-TIL_객체.md
+++ b/_posts/2021/2021-12-05-TIL_객체.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[TIL] Javascript 객체 리터럴"
-categories: web
+categories: Javascript
 tag: [TIL, Javascript, 객체, 객체 리터럴]
 toc: true
 author_profile: true
