--- a/_posts/2021/2021-12-10-알고리즘_큐.md
+++ b/_posts/2021/2021-12-10-알고리즘_큐.md
@@ -1,7 +1,7 @@
 ---
 layout: single
-title: "[알고리즘] 백준 - 10845 큐 18258 큐2"
-categories: algorithm
+title: "[Algorithm] 백준 - 10845 큐 18258 큐2"
+categories: Algorithm
 tag: [자료구조, 알고리즘, data structure, algorithm, 백준, 큐]
 toc: true
 author_profile: true
