--- a/_posts/2021/2021-12-11-자료구조 스택 및 링크드리스트.md
+++ b/_posts/2021/2021-12-11-자료구조 스택 및 링크드리스트.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[자료구조] 스택 및 링크드리스트"
-categories: algorithm
+categories: Algorithm
 tag: [자료구조, 알고리즘, data structure, algorithm, 백준, 큐]
 toc: true
 author_profile: true
@@ -98,6 +98,7 @@ returned 4
    ```
 
 3. Node 관련 메서드 정의 (add, desc/print, delete)
+
    ```py
    class NodeMgmt:
        def __init__(self, data):
