--- a/_posts/2021/2021-12-22-TIL_함수와 일급객체.md
+++ b/_posts/2021/2021-12-22-TIL_함수와 일급객체.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[MJS] 함수와 일급객체"
+title: "[TIL] Javascript - 함수와 일급객체"
 categories: Javascript
 tag: [MJS, Javascript, 함수, 함수 객체]
 toc: true
