--- a/_posts/2021/2021-12-24-TIL_this.md
+++ b/_posts/2021/2021-12-24-TIL_this.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[MJS] this"
+title: "[TIL] Javascript - this"
 categories: Javascript
 tag: [MJS, Javascript, this, call, apply, bind]
 toc: true
