--- a/_posts/2021/2021-12-29-TIL_this.md
+++ b/_posts/2021/2021-12-29-TIL_this.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[MJS] this"
+title: "[MJS] Javascript - this (2)"
 categories: Javascript
 tag: [MJS, Javascript, this, call, apply, bind]
 toc: true
@@ -113,8 +113,10 @@ sidebar:
 
 - Call, Apply, Bind 메서드
   this에 특정값을 지정해주는 메서드
+
   - Call
     call 메서드는 모든 함수에서 사용할 수 있으며 this를 특정값을 지정할 수 있다.
+
     ```jsx
     const mike = {
       name: "mike",
@@ -134,9 +136,11 @@ sidebar:
     // 함수를 사용하면서 call을 하고 this로 사용할 객체를 넘기면
     // 해당 함수가 주어진 객체의 메서드인 것처럼 사용할 수 있다.
     ```
+
     그냥 함수 호출한 경우와 call하여 mike를 객체로 전달한 것과의 차이로 call을 이해할 수 있다.
     call을 이용해서 mike를 this로 사용할 수 있도록 해주면 mike.name을 나타낼 수 있는 것이다.
     위의 코드에 이어서, update라는 생성자를 만들어 call을 통해 객체를 업데이트할 수 있다.
+
     ```jsx
     function update(birthYear, occupation) {
       this.birthYear = birthYear;
@@ -148,10 +152,13 @@ sidebar:
     // update를 call하고 나머지 객체를 전달해주니까
     // update에서는 전달받은 객체를 this로 사용하고, 그 객체의 birthYear, ocuupation을 각각의 값으로 지정한다.
     ```
+
     this를 mike로 사용할 수 있도록 mike를 전달해주고, 나머지 객체들을 전달해주니 원래의 객체에 속성이 추가된 것을 확인할 수 있다.
+
   - Apply
     call과 거의 같지만, 매개변수를 배열로 받는다.
     함수 매개변수를 배열로 사용할 때 유용하다.
+
     ```jsx
     const tom = {
       name: "tom",
@@ -165,7 +172,9 @@ sidebar:
     update.apply(tom, [2002, "teacher"]);
     console.log(tom); // { name: 'tom', birthYear: 2002, occupation: 'teacher' }
     ```
+
   - Bind
+
     ```jsx
     const mike = {
       name: "mike",
@@ -180,5 +189,6 @@ sidebar:
     updateMike(1980, "police");
     console.log(mike); // { name: 'mike', birthYear: 1980, occupation: 'police' }
     ```
+
     bind는 항상 mike를 this로 받겠다고 하는 것. (사실 bind는 지정된 this를 가지는 함수를 반환해준다.)
     따라서, updateMike에 첫번째 인자로 굳이 mike 객체라고 명시해주지 않아도 this는 mike로 이미 영구히 지정되어있다.
