--- a/_posts/2021/2021-12-13-자료구조 링크드리스트.md
+++ b/_posts/2021/2021-12-13-자료구조 링크드리스트.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: "[자료구조] 링크드리스트"
-categories: algorithm
+categories: Algorithm
 tag: [자료구조, 알고리즘, data structure, algorithm, 백준, 큐]
 toc: true
 author_profile: true
