--- a/_posts/2022/2022-03-05-TIL_면접 대비 공부 및 과제 회고.md
+++ b/_posts/2022/2022-03-05-TIL_면접 대비 공부 및 과제 회고.md
@@ -21,7 +21,7 @@ sidebar:
 
   꾸준함을 무기로 기술 스택 학습과 협업 역량을 키워왔습니다.
 
-  React 팀 프로젝트를 진행하며 React와 디자이너와 백엔드 개발자와 소통 역량을 길렀고, 원티드 프론트엔드 코스를 진행하며 팀 단위 프로젝트에서 마이크로 단위 개발 및 git을 통해 협업 역량을 길러왔습니다.
+  React 팀 프로젝트를 진행하며 React와 디자이너와 백엔드 개발자와 소통 역량을 길렀고, 원티드 프론트엔드 코스를 진행하며 팀 프로젝트에서 마이크로 단위 개발 및 git을 통해 협업 역량을 길러왔습니다.
 
   이러한 역량을 기반으로 프론트엔드 개발자로서 맡은 기능을 구현하며 협업하기 좋은 개발자로서 역량을 발휘하겠습니다.
 
