post: personal assgn 1

--- a/_posts/2021/2021-12-27-Project_개발환경설정.md
+++ b/_posts/2021/2021-12-27-Project_개발환경설정.md
@@ -38,11 +38,11 @@ sidebar:
 
 #### 와이어 프레임
 
-<img src='assets\images\211227_wireFrame1.png'></img>
+![이미지]({{ site.url }}{{ site.baseurl }}/assets/images/2022-12/211227_wireFrame1.png)
 
-<img src='assets\images\211227_wireFrame2.png'></img>
+![이미지]({{ site.url }}{{ site.baseurl }}/assets/images/2022-12/211227_wireFrame2.png)
 
-<img src='assets\images\211227_wireFrame3.png'></img>
+![이미지]({{ site.url }}{{ site.baseurl }}/assets/images/2022-12/211227_wireFrame3.png)
 
 <br>
 
@@ -52,15 +52,23 @@ CRA 없이 개발 환경 구축
 
 #### init
 
-yarn init
+Terminal에서 package init
 
-후
+```
+yarn init
+```
+
+이후
 
 package.json 설정
 
 #### react 설치
 
+React를 사용할 것이기 때문에 React를 일단 설치해야한다.
+
+```
 yarn add react react-dom
+```
 
 package.json dependency에 추가 확인
 
