--- a/_posts/2022-02/2022-04-02-TIL 공부 220402.md
+++ b/_posts/2022-02/2022-04-02-TIL 공부 220402.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[TIL] babel 학습"
+title: "[TIL] rollup 학습 2"
 categories: TIL
 tag: [TIL, babel]
 toc: true
@@ -17,9 +17,7 @@ sidebar:
 
 강의 : <https://www.youtube.com/watch?v=vUcd_fpIN7c&list=PLcaKom3xthg4rmQNY6HHUldeiqjWYlD-f&index=1>
 
-### babel
-
-#### babel이란?
+### rollup
 
 ## 회고 (TIL)
 
@@ -28,7 +26,6 @@ sidebar:
 ✏오늘 한 일
 
 - 입사 전 추가 공부
-  - babel
 
 ⁉느낀 점
 
