post: til-before first career

--- a/_posts/2022-02/2022-04-05-TIL 공부 220405.md
+++ b/_posts/2022-02/2022-04-05-TIL 공부 220405.md
@@ -15,14 +15,19 @@ sidebar:
 
 ## GraphQL
 
+### GraphQL 관련 학습 추가 필요
+
+유튜브 링크: <https://www.youtube.com/watch?v=xiE9-S7s9rs>
+
+인프런 강의 찾기
+
 ## 회고 (TIL)
 
 **2022.04.05 Daily 회고**
 
 ✏오늘 한 일
 
-- 입사 전 추가 공부
-  - GraphQL
+- 내일 출근 준비
 
 ⁉느낀 점
 
@@ -32,5 +37,7 @@ sidebar:
 많이 부족한 것은 당연할테고.. 내가 질문을 잘 할 수 있는 환경인지가 궁금하다.
 
 🎃현재 나의 상태
+
+떨린다!
 
 <hr>
