--- a/_posts/2022-02/2022-04-05-TIL 공부 220405.md
+++ b/_posts/2022-02/2022-04-05-TIL 공부 220405.md
@@ -15,11 +15,43 @@ sidebar:
 
 ## GraphQL
 
-### GraphQL 관련 학습 추가 필요
+### GraphQL 이론
 
-유튜브 링크: <https://www.youtube.com/watch?v=xiE9-S7s9rs>
+#### GraphQL 이란?
 
-인프런 강의 찾기
+Query Language (쿼리 언어)이다.
+
+#### GraphQL이 만들어진 이유
+
+먼저 rest api에 대해서 이해가 필요하다.
+
+REpresentational state transfer
+
+REpresentational : 사물을 일반적으로 보이는대로 보여준다.
+
+state : 상태
+
+transfer : 전달
+
+즉,
+
+> Rest는 프론트엔드가 필요한 정보를 서버에게 요청하는 통신 방식 중의 하나이다.
+
+Rest는 요청하는 방식이 정해져있고, 받게 되는 정보의 구조 또한 이미 정해져 있다.  
+따라서 요청에 정해져 있는 데이터 그냥 다 주고 쓸 건 내가 알아서 찾아 써야한다.
+
+**반면에**
+
+프론트엔드가 원하는 데이터만 요청하면 graphQL이 모든 데이터 중 필요한 데이터만 쿼리하여 갖다준다!
+
+즉,
+
+> Server API로 정보를 주고받는 것에 특화된 Query Language(DB에 접근하기 위한 언어)이다.
+
+iOS, Android, Web 등 다양한 프론트엔드 단에서 필요한 정보의 형태가 조금씩 달라  
+기존에 REST API(데이터 주는 것이 정해져있는)로 이를 일일이 구현해야 했기 때문에 비효율적이었다.
+
+**정보를 요청하는 쪽에서 원하는 형태로 정보를 가져오고 수정할 수 있는** Query Language가 나오게 되었다.
 
 ## 회고 (TIL)
 
