post: til-graph and first day

--- a/_posts/2022-02/2022-04-06-TIL 입사 첫날 및 공부 220406.md
+++ b/_posts/2022-02/2022-04-06-TIL 입사 첫날 및 공부 220406.md
@@ -1,8 +1,8 @@
 ---
 layout: single
-title: "[TIL] 입사 첫날 후기 및 GraphQL 학습"
+title: "[TIL] 입사 첫날 후기"
 categories: TIL
-tag: [TIL, 입사 첫날, GraphQL]
+tag: [TIL, 입사 첫날]
 toc: true
 author_profile: true
 sidebar:
@@ -94,35 +94,26 @@ app.tsx에서 시작해서 홈페이지부터 수 많은 페이지를 읽어야 
 
 일단 차근차근 읽어보고, 제일 급한 graphQL 부터 강의와 실습을 해보려고 한다.
 
-## GraphQL
-
-장점:
-
-- 강력한 개발자 도구
-- 필요한 것만 정확히 얻음
-- 항상 예측 가능한 결과를 반환
-- 단일 요청으로 필요한 데이터를 모두 가져옴
-- 빠름
-
-### 실습
-
 ## 회고 (TIL)
 
-**2022.04.05 Daily 회고**
+**2022.04.06 Daily 회고**
 
 ✏오늘 한 일
 
-- 내일 출근 준비
+- 입사 첫날
+  - 인사 (금요일날 또 해야함..)
+  - 개발 환경 설정
+  - 코드 분석
+- graphQL 영상 보기
 
 ⁉느낀 점
 
-내일 첫 출근이다!  
-첫 직무 첫 이직.  
-사회초년생으로서 첫 출근만큼 떨리는 것은 아닌 것 같으나 그래도 걱정이 많이 된다.  
-많이 부족한 것은 당연할테고.. 내가 질문을 잘 할 수 있는 환경인지가 궁금하다.
+해야할 것이 많이 쌓였다.  
+graphQL 시급하다! 가장 먼저해야할 것 같다.  
+그 다음은 Typescript 이론과 Jest (테스트 코드)를 공부해야겠다.
 
 🎃현재 나의 상태
 
-떨린다!
+목아프다.. 이놈의 디스크는 목이고 허리고 아주 난리야.
 
 <hr>
