--- a/_posts/2022-02/2022-04-10-TIL 코드 분석 220410.md
+++ b/_posts/2022-02/2022-04-10-TIL 코드 분석 220410.md
@@ -17,6 +17,75 @@ sidebar:
 
 메인 플로우를 따라서 코드 분석을 해보자.
 
+#### query-string-for-all
+
+**parse**
+
+```jsx
+console.log(location.search);
+//=> '?foo=bar'
+
+const parsed = queryString.parse(location.search);
+console.log(parsed);
+//=> {foo: 'bar'}
+```
+
+**stringify**
+
+```jsx
+parsed.foo = "unicorn";
+parsed.ilike = "pizza";
+
+const stringified = queryString.stringify(parsed);
+//=> 'foo=unicorn&ilike=pizza'
+
+location.search = stringified;
+// note that `location.search` automatically prepends a question mark
+console.log(location.search);
+//=> '?foo=unicorn&ilike=pizza'
+```
+
+#### Javascript !! (느낌표 두개/Double Exclamation Marks)
+
+> 확실한 논리결과를 위한 연산자
+
+undefined나 null을 false로 처리한다.
+
+**예시**
+
+```jsx
+var a;
+console.log("a    :: " + a);
+console.log("!a   :: " + !a);
+console.log("!!a  :: " + !!a);
+
+var b = true;
+console.log("b    :: " + b);
+console.log("!b   :: " + !b);
+console.log("!!b  :: " + !!b);
+
+var c = null;
+console.log("c    :: " + c);
+console.log("!c   :: " + !c);
+console.log("!!c  :: " + !!c);
+```
+
+**결과**
+
+```
+a    :: undefined
+!a   :: true
+!!a  :: false
+
+b    :: true
+!b   :: false
+!!b  :: true
+
+c    :: null
+!c   :: true
+!!c  :: false
+```
+
 ## 회고 (TIL)
 
 **2022.04.10 Daily 회고**
