--- a/_posts/2022-02/2022-04-14-TIL 공부 220414.md
+++ b/_posts/2022-02/2022-04-14-TIL 공부 220414.md
@@ -52,23 +52,23 @@ SSR이 아니기 때문에 head 태그 내부는 수정할 수 없기 때문에 
 가장 상위 컴포넌트를 HelmetProvider로 감쌉니다. (ApolloClient, ContextProvider 처럼)
 
 ```jsx
-import React from "react";
-import ReactDOM from "react-dom";
-import { Helmet, HelmetProvider } from "react-helmet-async";
+import { StrictMode } from "react";
+import { createRoot } from "react-dom/client";
 
-const app = (
-  <HelmetProvider>
-    <App>
-      <Helmet>
-        <title>Hello World</title>
-        <link rel="canonical" href="https://www.tacobell.com/" />
-      </Helmet>
-      <h1>Hello World</h1>
-    </App>
-  </HelmetProvider>
+import { HelmetProvider } from "react-helmet-async";
+
+import App from "./App";
+
+const rootElement = document.getElementById("root");
+const root = createRoot(rootElement);
+
+root.render(
+  <StrictMode>
+    <HelmetProvider>
+      <App />
+    </HelmetProvider>
+  </StrictMode>
 );
-
-ReactDOM.hydrate(app, document.getElementById("app"));
 ```
 
 이후 App 컴포넌트 내에서 Helmet 컴포넌트를 사용하여 head 태그를 수정할 수 있습니다.
