post: til-220416 design system

--- a/_posts/2022-02/2022-04-14-TIL 공부 220414.md
+++ b/_posts/2022-02/2022-04-14-TIL 공부 220414.md
@@ -2,7 +2,7 @@
 layout: single
 title: "[TIL] React Helmet"
 categories: TIL
-tag: [TIL, React, react-helmet-async]
+tag: [TIL, React, 라이브러라, react-helmet-async]
 toc: true
 author_profile: true
 sidebar:
