--- a/_posts/2022-02/2022-04-19-TIL 공부 220419.md
+++ b/_posts/2022-02/2022-04-19-TIL 공부 220419.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[TIL] [TIL] 디자인 시스템 구현 강의 (2)"
+title: "[TIL] Input 숫자만 입력 받기 구현"
 categories: TIL
 tag: [TIL, React]
 toc: true
@@ -11,14 +11,19 @@ sidebar:
 
 ## TIL
 
-**TIL**
+**TIL 및 구현 사항**
 
 ### Number Type Input
 
-Number Type input에서 '-' 또한 입력되지 않도록 하려고 했다.
+> Number Type input에서 '-'를 포함하여 모든 문자/특수문자가 입력되지 않도록 하려고 했다.
+
+#### 처음 접근법
+
+> keydown으로 문자 입력을 막자
 
 1. chrome에서는 input에 number type을 주면 숫자를 제외한 나머지는 JS 처리 없이 입력되지 않는다.  
-   그러나 -, +, e, E는 숫자로 간주되어 입력이 된다.  
+   그러나 이마저도 -, +, e, E는 숫자로 간주되어 입력이 된다.
+
    이를 없애려
 
    ```html
@@ -32,11 +37,11 @@ Number Type input에서 '-' 또한 입력되지 않도록 하려고 했다.
 
 2. 따라서 애초에 onKeyDown 때 숫자만 입력되도록 하려고 했다.
 
-   처음에 다음과 같이 구현했다.
+   처음에 다음과 같이 정규식으로 구현했다.
 
    ```html
-   <input onKeyDown={ (e) => { if(isNumber(e.key)) { // isNumber는 lodash에서
-   사용 e.preventDefault() } } } />
+   <input onKeyDown={ (e) => { if(!/^[0-9]+$/.test(e.key)) { // isNumber는
+   lodash에서 사용 e.preventDefault() } } } />
    ```
 
    그러나 이렇게 되면 숫자가 아닌 입력에서는 아예 동작이 불가능하다.  
@@ -45,15 +50,64 @@ Number Type input에서 '-' 또한 입력되지 않도록 하려고 했다.
    따라서 다음과 같이 조건을 추가하였다. (special keys / function keys 를 구별)
 
    ```html
-   <input onKeyDown={ (e) => { if(isNumber(e.key) && e.key.length > 1) {
-   e.preventDefault() } } } />
+   <input onKeyDown={ (e) => { if (!/^[0-9]+$/.test(e.key) && e.key.length ===
+   1) { e.preventDefault() } } } />
    ```
 
    이렇게 enter, backspace 등과 같은 key들을 구별하는 함수가 lodash에도 없고,  
    정규식으로도 할 수 없는 부분이기 때문에  
    length가 2자 이상인 것은 캐릭터가 아닌 펑션 키들을 나타내는 것이므로 다음과 같이 조건을 추가했다.
 
-   best practice는 계속해서 찾아야한다고 생각한다.
+   이렇게 하면 보통의 경우에 동작하기는 한다.
+
+   그러나 e.key.length === 1 매우 마음에 들지 않는 조건이다.
+
+3. 문자/특수문자가 포함된 string을 복/붙했을 때 처리  
+   생각해보니 문자/특수문자가 포함되어있는 문자열을 복사해서 input에 붙여넣었을 때 동작을 생각해보아야 한다.
+
+   키보드로 입력 시 복사 붙여넣기가 아예 되지 않았다. (ctrl 에서 v를 눌러야하지만 v가 눌리지 않기 때문에)
+
+   그러나! 마우스로 붙여넣을 때는 보기좋게 붙여넣어졌다ㅎㅎ
+
+   그래서 input 컴포넌트에 onPaste 이벤트 핸들러를 추가하여 기본동작을 막았다.
+
+   ```jsx
+   onPaste={e => e.preventDefault()}
+   ```
+
+   심히 마음에 들지 않았다. 무언가 잘못하고 있다는 느낌을 지울 수 없었다.
+
+   첫번째로 예외 처리를 하는 데에 코드가 장황해졌다.  
+   두번째로 이렇게 되면 다른 예외 상황에 대해서 커버되지 않는다는 것을 뜻한다.
+
+   **그래서 키가 눌렸을 때가 아닌 input 값에 변화가 있을 때를 핸들링하여 필터링을 해야한다고 생각했다.**
+
+- **삽질하다 발견한 점**
+
+  e.which, e.keyCode, e.CharCode는 곧 종료될 예정.  
+   onkeypress는 deprecated로 사용을 권장하지 않음.  
+   input type number 일 때 chrome에서만 non-numeric이 입력 불가.  
+   input type number일 때 (e, E, -, +) 입력 시 input이 초기화된다.
+
+#### 두번째 접근법
+
+> onChange 핸들러에서 input 값을 숫자만 필터링
+
+```jsx
+<input onChange={handleExtractNumberFromValue} />
+```
+
+onChange로 키가 눌렸을 때는 물론, 어떠한 방법으로든 input 값에 변화가 일어나면  
+변화된 값을 정규표현식으로 숫자만 필터링하여 input value를 다시 set 해주었다.
+
+```jsx
+const handleExtractNumberFromValue = (e: React.ChangeEvent<HTMLInputElement>) =>
+  setValue("phoneNumber", e.target.value.replace(/[^0-9]/g, ""));
+```
+
+결과는 성공적이었다!!
+
+//////////////// 코드 및 이미지 추가 필요 (주말에)
 
 ## 회고 (TIL)
 
