--- a/_posts/2022-02/2022-04-26-TIL 공부 220426.md
+++ b/_posts/2022-02/2022-04-26-TIL 공부 220426.md
@@ -128,4 +128,12 @@ outline을 사용하면 된다.
 빨리 어려운 걸 겪어야 나중에 덜 힘들텐데!  
 일단 업무 조금이라도 쉬울 때 공부 많이해두자!
 
+📚 내일 할 것
+
+- Vue 업무 마무리
+- Vue 추가 업무 할당 및 시작
+- 환경 세팅 알아보기 **중요**
+  - next, rollup, babel, 등등
+- React 프로젝트 문서화
+
 <hr>
