--- a/_posts/2022-02/2022-04-28-TIL 공부 220428.md
+++ b/_posts/2022-02/2022-04-28-TIL 공부 220428.md
@@ -156,17 +156,31 @@ pnp.cjs 파일 생성
 yarn dlx @yarnpkg/sdks vscode
 ```
 
-.vscode 폴더에 세팅 json 파일 생성
+typescript 를 포함한 프로젝트이므로 버전을 허용해야 한다.
+
+모두 설치가 된 후에
+
+<img src='https://tigger.dev/images/2022/04/yarn/allow.png' />
+
+[이미지 출처](https://tigger.dev/2022/yarn/berry-ts-rollup-react)
+
+위와 같은 알림창이 뜨는데 이때 Allow를 눌러야 한다!!!
+
+아니면 빨간색 에러줄 (cannot find modules...)이 계속 뜨게 될 것이다. (그러나 프로젝트는 정상동작)
+
+**만약 모르고 X를 눌렀다면!?**
+
+setting에서 command palette (단축키 ctrl + shift + p)로 들어가서 typescript를 검색.
+
+select typescript version 선택
+
+use Workspace version 선택
 
 #### typescript plugin 설치
 
 ```bash
 yarn plugin import typescript
 ```
-
-### yarn berry 마이그레이션 실패!
-
-다시다시..
 
 ## 회고 (TIL)
 
