mod: l10n example image file

--- a/_posts/2023-01/2023-04-23-i18n 이란.md
+++ b/_posts/2023-01/2023-04-23-i18n 이란.md
@@ -74,7 +74,7 @@ SW 국제화
 
   - ex) 총 쏘는 게임
 
-    ![l10n_example]({{ site.url }}{{ site.baseurl }}/assets/images/2023-04/l10n_example.gif)
+    ![l10n_example]({{ site.url }}{{ site.baseurl }}/assets/images/2023-04/l10n_example.png)
 
     이미지 출처: [[https://miaow-miaow.tistory.com/32](https://miaow-miaow.tistory.com/32)]
 
