post: one year old junior developer restrospect

--- a/_posts/2023-04/2023-04-24-개발자 1년 회고.md
+++ b/_posts/2023-04/2023-04-24-개발자 1년 회고.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "[retrospect] 프론트엔드 개발자 1년 회고"
+title: "[retrospect] 프론트엔드 개발자 1년 회고 (feat. 이직)"
 categories: retrospect
 tag: [retrospect, 취업, 회고, 비전공자, 프론트엔드, 독학]
 toc: true
@@ -13,185 +13,271 @@ sidebar:
 
 **비전공자 프론트엔드 개발자의 1년차 회고**
 
-벌써 개발자가 된지가 6개월이 넘었다.
+벌써 개발자로서 커리어를 시작한지 1년이 넘었다.
 
-예전에 구직하면서 미래가 불투명(?)할 때 개발자들은 어떻게 일을 하는 것일까 너무나도 궁금했었다.  
-그때 `개발자 1년차가 할 수 있는 것들`이라는 글을 보게 되었는데, 아 1년차는 이런 일을 보통하는 구나! 라고 갈피를 잡았던 기억이 있다.
+예전에 구직하면서 보았던 `개발자 1년차가 할 수 있는 것들`이라는 글을 통해 도움을 많이 받았었고, 나 또한 어떤 성장을 하고 있는지 가시적으로 표시하고 메타인지를 위해 회고글을 작성해야겠다고 항상 생각해왔다.
 
-그래서 이후에 내가 개발자가 된다면 내가 6개월차에는 무엇을 할 수 있고, 1년차에는 무엇을 할 수 있을지가 너무 궁금했다.  
-또 그것을 글로 남겨두면 올챙이적을 기억을 함과 동시에 성장할 수 있지 않을까 싶었다.  
-다른 사람과 공유를 할 수 있는 것은 덤!
+이전에 작성했던 회고글 목록
 
-하여 6개월차 햇병아리 프론트엔드 개발자의 회고를 해보려고 한다.
+- [개발자 취업 회고](https://jisu-y.github.io/retrospect/%EA%B0%9C%EB%B0%9C%EC%9E%90-6%EA%B0%9C%EC%9B%94-%ED%9A%8C%EA%B3%A0/)
+- [개발자 6개월차 회고](https://jisu-y.github.io/retrospect/%EA%B0%9C%EB%B0%9C%EC%9E%90-6%EA%B0%9C%EC%9B%94-%ED%9A%8C%EA%B3%A0/)
+
+1년차 병아리 프론트엔드 개발자의 회고를 해보려고 한다.
 
 ## 내가 해왔던 것들
 
-> 입사하기 전 개발자 지망생일 때는 무엇을 했었고, 입사하고 나서는 무엇을 했나?
+> 입사하고 나서 현재까지 무엇을 해왔나?
 
-### 개발자 지망생일 때
+### 지난 6개월 간
 
-React 위주로 개인, 팀 프로젝트를 여럿 진행했다.
+6개월 차에 회고했던 것 처럼 비슷한 생활을 하고 있었다.
 
-보통 언어는 거의 Javascript를 사용했다. (Typescript도 사용하긴 했다.)
+사내 팀원과 프론트엔드 스터디를 꾸준히 진행하고,  
+꽤 오랫동안 알고 지낸 스터디 메이트와 다시 주 단위 스터디를 진행하고 있었다.  
+다행히 한 두번을 제외하고 매주 스터디했다.
 
-간간히 코딩테스트도 했다. (프로그래머스 1단계만 다품)
+책은 2권을 끝냈고, 현재는 책이 아닌 web 및 cs 관련 지식들을 세미나를 통해 공유하는 방식으로 진행하고 있었고, 하고 있다.
 
-스터디와 면접 준비를 거의 매일 진행했다.
+회사에서도 이제 유지 보수만 하는 것이 아닌 꽤 주요 기능들을 맡으며 사수와 페어 코딩하면서 아주 많이 성장했다고 생각한다.
 
-### 개발자가 된 후
+회사 동료들도 모두 실력도 좋고 성격도 좋아서 월요병이 없을 수도 있구나 싶었다!
 
-기술 스택이 맞는 (React, Typescript...) 회사에 들어가게 되어서 적응했다.
+### 다시 취준생으로
 
-처음으로 진짜 돈을 버는 코드를 보게 되었다.
+이렇게 좋은 일만 있었다면 참 좋았겠다.
 
-사내 팀원과 프론트엔드 스터디를 꾸준히 진행했다.
+하지만, 현실은 그렇진 않았다.  
+22년 하반기부터 불어온 스타트업 윈터로 인해 칼바람을 맞았다! 😢
 
-새로운 주 단위 스터디를 시작했다. (컴퓨터 구조)
+개인적인 이야기는 크게 작성하지 않을 예정이지만,  
+어쨌든 다니던 회사에 1년도 채우지 못한 채 경력이 단절되었다.
 
-개인 프로젝트는 진행하지 않았다.
+이전까지는 스타트업을 다닌 적이 없어 회사가 어려워진다는 것을 경우의 수에 두지 않았다.  
+그래서 준비가 안된 채로 다시 개발자 지망생이 되었다.
 
-블로그도 많이 쉬게 되었다.
+문제는 `준비가 안된 채`로 나오게 되었다는 것이다.
 
-그래도 업무에 잘 적응하여 업무를 잘 해낸 것 같다.
+회사를 다니면서는 좋은 사람들과 재미있는 도메인, 프로덕트를 만나서  
+재미있게 개발하고 있었다.
+
+그것에 매우 몰두했었고, 심지어 주말에도 어떻게 하면 더 잘하고 좋은 코드를 짤 수 있을지 고민했다.
+
+그래서 깃헙 관리는 엉망, 이력서도 준비 안되었었고, 경력은 있다고 하기도 힘든 꼴랑 몇 개월..  
+첫 취업을 준비하는 취준생보다도 못한 입장이라고 생각했다.
+
+### 재취업
+
+그렇다고 절망만 할 수는 없었다.
+
+이 상황에서 벗어나기 위해 **가장 먼저 해야 하는 일**은 무엇일까 생각했다.
+
+- 이력서 업데이트:  
+  최대한 회사에서 진행했던 프로젝트들을 정리하고 이력서를 업데이트했다.  
+  몇개월 다녔다 해도 다행히 이것저것 많이(?) 해볼 수 있었고, 확실히 성장해왔다고 느껴왔다.  
+  이력서에 적을 내용들은 없지는 않았다.  
+  물론 그럴 수록 신입이 아닌 경력으로서 경쟁해야 했기 때문에 더욱 부담되긴 했다.
+- 면접 준비:  
+  면접 준비는 취준/이직하겠다는 마음을 먹었으면 가장 먼저 해야 할 일이라고 생각했다.  
+  이전에 취준할 때에도 미리미리 꾸준히 준비했던 것이 도움이 많이 되었다.  
+  근데 진짜 안보니까 다 까먹고, 입도 안 떨어지더라.
+- 깃헙 관리:  
+  취준할 때에는 깃헙 관리가 매우 잘 되어 있었기 때문에  
+  `내가 공부 이렇게 열심히 하는 사람이다. 성장하는 사람이다.`라는 것을 보여주는 데 부족하지 않았던 것 같다.  
+  하지만 지금은 일을 다니면서 성장을 했다는 것을 수치로 보여줄 만한 결과 (`깃헙`, `개인 프로젝트`, `블로그 글` 등등)들을 가지고 있지 않았다.
+
+이렇게 크게 세 가지에 집중하면서 다시 취준을 시작했다.
+
+**내가 하지 않았던 것들**
+
+- 개인 프로젝트  
+  가성비가 딸린다고 생각했다.  
+  프로젝트를 하려면 기획, 디자인, 새로운 기술, 백, 인프라 등등 신경 써야 할 것들이 매우 많으나 서류를 검토하는 입장에서는 그거 얼마나 뭐 대단한 프로젝트라고 세심히 들여댜 볼 확률은 낮다.
+- 알고리즘 코테  
+  만약 대기업을 노렸다면 무조건 해야 하는 공부였을 것이다.  
+  하지만 상황이 상황이고 급했던 터라 타겟을 과제 코테를 보는 기업 중 조금이라도 여유있는 스타트업을 가기로 정했기 때문에 알고리즘은 또 우선순위를 미루어 두었다.
+- 부정적인 생각  
+  당연하지만, 취준을 하다 보면 혼자 하고 있지만 사실은 몇 천, 몇 만? 명과 경쟁하고 있는 것이기 때문에 막막하고 자신감도 하락한다.
+
+**회사를 고르는 기준**
+
+- 시리즈에 상관없이 자생 능력이 어느 정도는 되는지  
+  사실 스타트업이 자생 능력을 따지는 것도 사실 웃기기는 하지만,  
+  최소한 돈을 벌지 못하는 구조인데 사람만 엄청 많다든지.. 낌새가 이상한 기업들이 있다.
+- 도메인을 신경 쓰지 않을 수는 없더라.
+- 취업이 잘 안되고 있을 때도 최소한 이런 것들은 포기할 수 없을 것 같았다.
+
+그래도 하다보니 다시 취업에 성공하게 되었다!
+
+물론 전적은 처참했다! 🤣
+
+```
+입사 지원: 149
+서류 합격: 21 (서류합격률: 14%)
+면접 진행: 12
+최종 합격: 2
+```
+
+? 개발자는 경력이 깡패일까요? 6개월 경력 vs 신입은 누가 더 유리할까요?  
+개발자 === 경력 깡패 는 맞는 것 같다.  
+그러나 주니어 경력(0 ~ 1년차) vs 신입은 사람마다 다를 것 같다.  
+1년차라도 모르는 건 매한가지고 1년 동안 커리어가 어떻게 되는지에 따라  
+신입이 더 유리한 위치에 있을 수도 있다고 생각한다.  
+주니어는 결국 "나 쓸만해. 키워봐. 개발 좋아해. 공부도 꾸준히 해" 이 팩트를 전달해주는 게 관건이 아닐까.  
+물론 그 이상은 경력.
+
+잘 안되었던 이유를 생각해보면
+
+- 이력서를 좀 더 가독성 있게 했어야 했다. (검토하는 사람에게 떠먹여 줘야 한다.)
+- 경력 단절 (퇴사 이유, 공백 기간 등 절대 무시할 수 없다.)
+- 신입과는 다른 잣대(?) (실제로 신입 때는 서류 붙었던 곳들이 다 떨어졌다.)
+
+그래도 취업은 잘 되었고 현재도 잘 다니면서 즐겁게 개발하고 있다.
+
+## 깨달은 것들
+
+### 회사는 잘 보고 결정하자.
+
+특히 스타트업에서는 회사를 보는 눈을 길러야 한다.  
+평생 직장할 것 아니니까 최소한 1년 2년 정도는 런웨이가 남아 있을 듯한 회사라도 가자.
+
+### 회사를 다녀도 개발자는 항시 준비가 되어 있어야 한다.
+
+회사가 힘들면 개발자를 가장 먼저 자른다고 한다... 🤐  
+그러니 개발자는 언제든 나갈? 준비가 되어 있어야 한다.
+
+블로그 글 투고, 이력 정리 및 업데이트, 공부, 개발 커뮤니티 활동(인맥).. 등등
+
+### 회사 일은 회사 일이고 내 공부는 내 공부다.
+
+아무리 회사 일이 좋고, 성장 욕구가 넘치더라도 회사 일은 회사 일이다.  
+되도록이면 초과근무는 지양하고, 주말 근무는 더더욱 하지 않도록 하자.
+
+개발자이기 때문에 야근 등은 피할 수 없겠지만, 내 공부와 일은 분리하자.  
+물론 일하면서 신기술을 적용하며 공부가 될 수 있겠지만,  
+그것을 진득하게 들여댜보고 공부하는 시간 또한 필요하다.  
+회사에서는 그것을 할 수 없기에 무조건 개인 공부는 따로 가져가야 한다.
+
+### 퇴사는 최최최후의 보루이다.
+
+힘들고 지쳐도 실제 퇴사는 미루고 미루자.
+
+### 결국엔 안정한 회사를 찾아가야 되겠다.
+
+이런 고생을 하지 않으려면 결국 안정적인 회사를 가야 한다.
+
+그러므로 알고리즘 코테는 무조건 해야 겠다.
 
 ## 이제 할 수 있는 것들
 
-> 6개월차 개발자로서 이제 무엇을 할 수 있나?
+> 1년차(?) 개발자로서 이제 무엇을 할 수 있나?
 
-#### 실제로 개발자가 어떻게 일을 하는지 알게 되었다.
+#### 빠르게 적응하기
 
-항상 의문이 있었다.  
-혼자 개발하거나 팀 프로젝트를 하여도 개발자 지망생들과 개발을 진행했기 떄문에 이게 정말 실제로도 이럴까? 코드를 이렇게 짤까? 라는 궁금증이 매우 강했다.  
-실무자들만 알고 있는 천기누설 비밀 이런거 있는 거 아니냐면서,,
+이전에 1개월 동안은 거의 큰 피쳐는 맡지 않았던 데에 비해  
+옮기고 나서는 거의 일주일 만에 피쳐를 받아 업무를 했다.
 
-하지만 일단 개인적인 생각으로 개발 업무에 있어서는 크게 다르지 않을 것 같다는 생각을 했다.
+예전엔 코드 분석이 엄청 오래 걸렸던 걸 생각해보면  
+지금은 1인분 할 수 있는 레벨까지 다가가는 시간이 꽤 빨라졌다고 생각한다.
 
-그 이유는,  
-실무에서도 똑같은 고민(기술 스택, 구현)을 하기 때문에 일단 개발 자체는 하는 일은 거의 동일할 것 같다고 생각했다.
+#### 개발 문화 전파하기
 
-그래서 개인/팀 프로젝트 또한 이력서에서 어느 정도 어필이 되는 이유가 그것이지 않을까.
+이전에 다니던 회사보다 작은 회사로 오게 되었는데,  
+스타트업에서는 개발 문화 같은 것을 빌딩하는 것도 하나의 능력이라고 생각하게 되었다.
 
-#### 프로덕트가 어떻게 유기적으로 돌아가는지 알게 되었다.
+그래서 이전에 좋은 느낌을 받았던 문화들을 소개하고 도입을 주장하기도 한다.
 
-이 또한 매우 궁금했던 점이다.  
-개발자끼리의 소통말고 실제로 일을 할 때는 누구와 어떻게 소통하고 일하게 될 지가 너무 궁금했었다.
+코드 리뷰, 주 단위 회고 문화, 온보딩 문서 도입, 활발한 질의 응답 등등!
 
-개인/팀 프로젝트 정도 수준이면 개발자들 혹은 디자이너까지의 소통이 전부이다.  
-그러나 실제로는 PO, PM, 기획, 데이터 엔지니어, 마케터 등등 개발에 실제로 많은 인원이 연계되어 있고, 또 소통해야한다.
+팀원들 모두 적극적이라서 감사하다.  
+심지어 내가 바라고 바라던 시니어까지 계셔서 도움을 얻을 때도 많아서 더 좋다.
 
-온보딩이 끝나고 업무를 실제로 하기 시작하니 여러 직무들과 소통할 수 있는 기회가 많았어서 궁금증이 해소되었고, 많이 배웠다.
+#### 설계할 때 확장성 및 가독성을 중요시
 
-깨달은 것은 PO, PM의 중요성..?  
-이 분들이 실제적으로 개발자들이 개발에 집중할 수 있도록 프로덕트 내지는 프로젝트를 leading하고 managing 해주기에 꽤 중요하다고 생각한다. 특히 플랫폼에서는.
+아는 대로 코드를 작성했던 때와는 조금 다르게  
+설계할 때 조금이라도 확장성을 고려하려고 하고,  
+어떻게 하면 코드 가독성이 더 좋을까 고민하고,  
+더 좋은 패턴이나 방법은 없을까 고민하는 습관이 들어가고 있는 것 같다.
 
-추가적으로 궁금한 것은  
-애자일을 어떻게 하면 더 효율적으로 할 수 있을지는 고민이고, 궁금하다.  
-회사도 애자일 방식으로 피쳐를 개발하고 문제를 해결하는데, 어쩔때는 미팅이 너무 많아서 개발을 몇시가 못할 때도 꽤 있었다. 워터폴이 어쩌면 나을지도 모르겠다라고 생각할 정도로. (워낙 불분명하고 정해지지 않는 것을 싫어하기 때문에..)  
-그래서 정말 애자일하게 하는 플랫폼 회사는 어떨까 궁금하다.
-
-#### 코드 분석
-
-처음 코드를 분석하라고 하셨을 때 어떻게 해야하나 싶었다.
-
-난생 처음보는 이 방대한 코드를 어떻게 다 알아야 하는 것인지? 어떻게 어디서부터 시작해야하는지 난감했다.
-
-그런데 코드 분석이 따로 필요하다기 보다.  
-실제로 서비스를 하나하나 사용해보고 까보면서 실제 사용 플로우대로 코드를 따라가보면 더욱 수월하게 할 수 있다는 것을 알게 되었다.
-
-또한, 일하다보면 어쩔 수 없이 분석을 해야만 하는데 하다보면 알게 되는 것도 신기했다.
-
-물론 코드 분석에는 아직 매우 서툴지만, 이제는 어디서 부터 시작해야할지는 알 것 같다.
-
-#### 백엔드 개발자와의 소통
-
-물론 팀프로젝트 단위에서도 백엔드 개발자와 소통을 할 수 있었지만, 회사에서는 graphql을 사용했기 때문에 query/mutation과 field 등 백엔드 개발자와 논의해야할 사항이 더 많았던 것 같다.
-
-이것 또한 피쳐 개발 간 소통을 많이 할 수 있어서 이제 어떤 것을 백엔드 개발자분께 여쭤봐야 하고, 요청해야하는지 감을 잡게 되었다.
-
-그러나 아직까지는 정확하게 이 정도는 백엔드에서 해주는 것이 좋은 것인지 그 기준을 세우지 못했다.
-
-#### 문서화의 중요성
-
-예전에 지나가던 개발자 인터뷰 영상에서 본인은 문서화 능력을 보고 뽑힌 것 같기도 하다. 라고 하신 분이 계셨었다.  
-그 때는 도대체 문서화가 중요하다고는 하는데 왜 중요한지를 전혀 몰랐다.
-
-그런데, 실무를 해보니 문서화는 매우매우 중요했다.
-
-히스토리를 남기는 것이 중요한 이유가 한 개발자가 한 회사에 수년간 있을 경우가 흔치 않다.  
-따라서 이후 들어올 개발자를 위해서, 지금 일하고 있는 개발자의 미래를 위해서도 히스토리 관리 및 문서화는 선택이 아닌 필수같다.
-
-또한, 새로 들어온 개발자를 빠르게 온보딩하게 하기 위한 문서의 정리이다.  
-실무에서는 새로 온 개발자는 케어하기가 힘든 구조이다.  
-그렇기 때문에 내 시간을 어떻게든 쪼개서라도, 야근을 하는 한이 있더라도 나를 위해서 온보딩 문서화를 해놓는 것이 중요하다고 생각한다.
-
-추가적으로 기술에 대한 문서이다.  
-신기술을 도입하는 등 기술을 사용하면서 pattern 혹은 practice를 문서화해놓으면,  
-다른 개발자가 관련 코드를 보는 데에도 도움도 되고, 공부한 것들을 정리하는 데에도 좋은 것 같다.  
-1석2조같은 느낌!
-
-이번에 잘 했다고 생각하는 것 중 하나가 문서화이다!
-
-문서화는 신입 개발자가 빠르게 업무에 두각을 나타낼 수 있는 부분이라고 생각한다.  
-많은 개발자들이 개발하느라 바빠 문서화를 뒤로 하는 경우가 꽤 있지만, 신입 개발자일 때 혹은 온보딩 중일 때 문서화를 많이 해두면 모든 사람에게 도움이 될 것이라고 생각한다.
+이전 직장에서 알게 모르게 많이 흡수하고 나온 것 같아 뿌듯하기도 했다.
 
 ## 아직 할 수 없는 것들
 
-> 6개월차 개발자로서 아직 할 수 없는 것은 무엇일까?
+> 1년차(?) 개발자로서 아직 할 수 없는 것은 무엇일까?
 
 #### 좋은 코드 및 좋은 설계가 무엇인지
 
-아직 `좋은 코드 및 좋은 설계`가 무엇인지 모르겠다.
+아직 `좋은 코드 및 좋은 설계`가 무엇인지는 아직도 공부 중이다.
 
-아직까지는 그냥 구현에 초점을 많이 맞춘 것 같다.  
-시간이 촉박해지면 더 더욱 좋은 방법을 찾기보다 일단은 빨리 해결할 수 있는 방법을 사용하는 것 같다.
+아티클을 많이 읽으며 확장성, 재사용성, 가독성 등을 고려하려고 노력할 뿐이다.
 
-시간을 무한정 늘릴 수는 없으므로 많은 코드를 보면서 미리 best practice, pattern 들을 숙지하는 것이 좋지 않을까.. 어렵다!
+이를 위해 꼭! 개인적으로 많이 코드를 짜 보고 좋은 코드를 많이 읽어야 할 것 같다.
 
-#### 기술 스택 혹은 라이브러리를 선택하는 기준
+#### CS 및 기초 베이스 지식들
 
-새로운 프로젝트를 시작한다고 했을 때, 기술 스택을 정해야 할텐데 어떤 기준을 가지고 정하며 상황에 따라 어떻게 더 좋은 선택을 할 수 있을지가 아직 궁금하다.
+CS는 교양 정도로만 알고 있는 듯하다.
 
-아직은 어떤 기준을 가지고 기술 스택을 정한다기 보다, 사용이 많이 되고 있는 스택(생태계도 중요하다고 생각) 위주로 생각하다보니 좋은 선택이 무엇인지 아직 모르겠다..
+이번에 책을 보긴 했지만 면접용 그 이상 그 이하도 아닌 것 같다.  
+CS에 관한 강의를 필수적으로 봐야 할 것 같다.
 
-라이브러리도 마찬가지로, 이전에 달력 라이브러리를 사용하려고 하는데 어떤 것을 사용해야할지 매우 고민되었었다. 애초에 라이브러리를 사용하는 것이 맞는 것일까라는 생각도 했다.
+또한 기초 베이스 지식인 Javascript, Typescript, React core 등  
+기본적인 것을 더 가져가고 싶다.
 
-이런 고민들은 연차가 높아지면, 프로젝트를 많이 수행하면 알게 될까?
+이대로는 모래 위에 성 쌓는 느낌을 지울 수가 없다!
+
+Modern JS를 다시 한 번 더 보려고 한다.  
+Typescript는 web 스터디를 하면서 주기적으로 계속 학습 예정이다.  
+React 또한 공식 문서를 보며 좀 core한 부분들을 아티클로 작성하고 있다.
 
 #### 인프라
 
-인프라는 뜬구름 잡듯이만 알고 있다.
+인프라는 여전히 잘 모르고 있다..
 
-먼 미래를 위해서는 DevOps가 되어야 하니 꼭 인프라도 알고 있어야 한다고 생각한다.
+너무 무리해서 하려고는 안한다.
 
-그러나 아직은 아무것도 모르는 것 같다...
+#### 기타
+
+사실 모르는 게 많아서 어떤 것을 모르는지 잘 모르겠다.
+
+아마도 알할 때는 아는 대로 하면 되니까 더 필요한 부분은 모르는 것일 수도 있다.  
+성장하기 위해서 comfort zone에 벗어날 수 있는 환경을 만들어야 할 것 같다.  
+팀 사이드 프로젝트를 한다거나..
 
 ## 해보고 싶은 것들
 
 > 이제 앞으로 어떤 것들을 해보고 싶나?
 
-#### 새로운 개인 프로젝트
-
-새로운 개인 프로젝트는 무조건 해야한다고 생각한다.
-
-프로젝트를 함으로써 번들러 등 환경 세팅도 배울 수 있고,  
-코드를 짜면서 좋은 코드를 위해 고민해볼 수 있고,  
-배포 등을 통해 인프라도 조금 볼 수 있다.
-
-꼭꼭 시작할 것이다.
-
-그런데, 좀 장기 프로젝트로 가져가고 싶다.  
-계속해서 유지보수도 해보고 몸집을 키워가면서 새로운 기술을 도입해보고 싶다.
-
 #### 스터디 지속
 
-지금 컴퓨터 구조를 스터디를 통해 공부하고 있는데,
+CS 관련 책으로 스터디하다가 지금 스터디는 web 관련 주제를 하나씩 정해서 하고 있다.
 
-추가적으로 javascript나 typescript 혹은 네트워크도 스터디하고 싶다.
+조금 광범위 하긴 하지만, 그때그때 생각나거나  
+궁금했던 부분을 공부하는 느낌이라 좀 더 재미를 붙일 수 있을 것 같아서 이렇게 하려고 한다.
 
-#### 좋은 곳으로 이직
+#### 개인 스터디
 
-6개월이 되었으니 업무도 조금씩 적응했겠다 이제 다시 블로그도 활성화시키고, 공부도 더 본격적으로 할 생각이다.
+아직은 장기 프로젝트를 할 생각은 없다.  
+하면 좋지만, 기획, 디자인에 대한 부담이 좀 있어서  
+적용해보고 싶은 기술에 대해서만 프로젝트를 하려고 한다.
 
-포트폴리오도 재정비해서 좀 더 좋은 곳으로 이직해서 개발하고 싶은 생각이다.
+현재는 e2e, unit test를 프로젝트 단에서 적용해보고 싶어서 진행 중이다.
+
+#### 알고리즘 코딩 테스트 준비
+
+내 취업/이직 전략 상 항상 후순위로 밀려났던 것인데,  
+이제는 진짜 해야 할 것 같다.  
+아니면 계속 못할 것 같은 느낌이다.
+
+근데 위 두 개만 해도 생각보다 되게 벅찬데 할 수 있을지는 좀 의문이다.  
+일주일에 1개라도 해봐야 겠다.
+
+#### 이직 준비
+
+일단 블로그와 스터디는 지속하고 있으니  
+이력서 업데이트를 지속적으로 하려고 한다!
+
+이직을 하지 않아도 항상 준비된 상태를 유지해야 한다.
+
+사실 위에 계획했던 것만 지키면 일단 반은 됐다고 생각한다.  
+**그러니 실천만 하자!**
 
 <hr>
