--- a/_posts/2023-04/2023-04-24-개발자 1년 회고.md
+++ b/_posts/2023-04/2023-04-24-개발자 1년 회고.md
@@ -17,12 +17,12 @@ sidebar:
 
 예전에 구직하면서 보았던 `개발자 1년차가 할 수 있는 것들`이라는 글을 통해 도움을 많이 받았었고, 나 또한 어떤 성장을 하고 있는지 가시적으로 표시하고 메타인지를 위해 회고글을 작성해야겠다고 항상 생각해왔다.
 
+1년차 병아리 프론트엔드 개발자의 회고를 해보려고 한다.
+
 이전에 작성했던 회고글 목록
 
 - [개발자 취업 회고](https://jisu-y.github.io/retrospect/%EA%B0%9C%EB%B0%9C%EC%9E%90-6%EA%B0%9C%EC%9B%94-%ED%9A%8C%EA%B3%A0/)
 - [개발자 6개월차 회고](https://jisu-y.github.io/retrospect/%EA%B0%9C%EB%B0%9C%EC%9E%90-6%EA%B0%9C%EC%9B%94-%ED%9A%8C%EA%B3%A0/)
-
-1년차 병아리 프론트엔드 개발자의 회고를 해보려고 한다.
 
 ## 내가 해왔던 것들
 
@@ -57,8 +57,7 @@ sidebar:
 
 문제는 `준비가 안된 채`로 나오게 되었다는 것이다.
 
-회사를 다니면서는 좋은 사람들과 재미있는 도메인, 프로덕트를 만나서  
-재미있게 개발하고 있었다.
+회사를 다니면서는 좋은 사람들과 재미있는 도메인, 프로덕트를 만나서 재미있게 개발하고 있었다.
 
 그것에 매우 몰두했었고, 심지어 주말에도 어떻게 하면 더 잘하고 좋은 코드를 짤 수 있을지 고민했다.
 
@@ -73,7 +72,7 @@ sidebar:
 
 - 이력서 업데이트:  
   최대한 회사에서 진행했던 프로젝트들을 정리하고 이력서를 업데이트했다.  
-  몇개월 다녔다 해도 다행히 이것저것 많이(?) 해볼 수 있었고, 확실히 성장해왔다고 느껴왔다.  
+  몇 개월 다녔다 해도 다행히 이것저것 많이(?) 해볼 수 있었고, 확실히 성장해왔다고 느껴왔다.  
   이력서에 적을 내용들은 없지는 않았다.  
   물론 그럴 수록 신입이 아닌 경력으로서 경쟁해야 했기 때문에 더욱 부담되긴 했다.
 - 면접 준비:  
@@ -91,7 +90,7 @@ sidebar:
 
 - 개인 프로젝트  
   가성비가 딸린다고 생각했다.  
-  프로젝트를 하려면 기획, 디자인, 새로운 기술, 백, 인프라 등등 신경 써야 할 것들이 매우 많으나 서류를 검토하는 입장에서는 그거 얼마나 뭐 대단한 프로젝트라고 세심히 들여댜 볼 확률은 낮다.
+  프로젝트를 하려면 기획, 디자인, 새로운 기술, 백, 인프라 등등 신경 써야 할 것들이 매우 많으나 서류를 검토하는 입장에서는 그거 얼마나 뭐 대단한 프로젝트라고 세심히 들여다 볼 확률은 낮다.
 - 알고리즘 코테  
   만약 대기업을 노렸다면 무조건 해야 하는 공부였을 것이다.  
   하지만 상황이 상황이고 급했던 터라 타겟을 과제 코테를 보는 기업 중 조금이라도 여유있는 스타트업을 가기로 정했기 때문에 알고리즘은 또 우선순위를 미루어 두었다.
@@ -117,13 +116,17 @@ sidebar:
 최종 합격: 2
 ```
 
-? 개발자는 경력이 깡패일까요? 6개월 경력 vs 신입은 누가 더 유리할까요?  
+<aside style='background-color : gold; opacity: 0.8; padding: 10px 20px'>
+❓ 개발자는 경력이 깡패일까? 6개월 경력 vs 신입은 누가 더 유리할까?
+
 개발자 === 경력 깡패 는 맞는 것 같다.  
 그러나 주니어 경력(0 ~ 1년차) vs 신입은 사람마다 다를 것 같다.  
-1년차라도 모르는 건 매한가지고 1년 동안 커리어가 어떻게 되는지에 따라  
-신입이 더 유리한 위치에 있을 수도 있다고 생각한다.  
-주니어는 결국 "나 쓸만해. 키워봐. 개발 좋아해. 공부도 꾸준히 해" 이 팩트를 전달해주는 게 관건이 아닐까.  
-물론 그 이상은 경력.
+1년차라도 모르는 건 매한가지고 1년 동안 커리어가 어떻게 되는지에 따라 신입이 더 유리한 위치에 있을 수도 있다고 생각한다.  
+주니어는 결국 `나 쓸만해. 키워봐. 개발 좋아해. 공부도 꾸준히 해.` 이 팩트를 전달해주는 게 관건이 아닐까.
+
+</aside>
+
+<br/>
 
 잘 안되었던 이유를 생각해보면
 
@@ -131,7 +134,8 @@ sidebar:
 - 경력 단절 (퇴사 이유, 공백 기간 등 절대 무시할 수 없다.)
 - 신입과는 다른 잣대(?) (실제로 신입 때는 서류 붙었던 곳들이 다 떨어졌다.)
 
-그래도 취업은 잘 되었고 현재도 잘 다니면서 즐겁게 개발하고 있다.
+그래도 취업은 잘 되었고 현재도 잘 다니면서 즐겁게 개발하고 있다.  
+(뭔가 좀 비약적이긴 한데, 사적인 부분이 많아 생략했다! 😂)
 
 ## 깨달은 것들
 
@@ -150,11 +154,11 @@ sidebar:
 ### 회사 일은 회사 일이고 내 공부는 내 공부다.
 
 아무리 회사 일이 좋고, 성장 욕구가 넘치더라도 회사 일은 회사 일이다.  
-되도록이면 초과근무는 지양하고, 주말 근무는 더더욱 하지 않도록 하자.
+되도록이면 초과 근무는 지양하고, 주말 근무는 더더욱 하지 않도록 하자.
 
 개발자이기 때문에 야근 등은 피할 수 없겠지만, 내 공부와 일은 분리하자.  
 물론 일하면서 신기술을 적용하며 공부가 될 수 있겠지만,  
-그것을 진득하게 들여댜보고 공부하는 시간 또한 필요하다.  
+그것을 진득하게 들여다보고 공부하는 시간 또한 필요하다.  
 회사에서는 그것을 할 수 없기에 무조건 개인 공부는 따로 가져가야 한다.
 
 ### 퇴사는 최최최후의 보루이다.
@@ -178,6 +182,9 @@ sidebar:
 
 예전엔 코드 분석이 엄청 오래 걸렸던 걸 생각해보면  
 지금은 1인분 할 수 있는 레벨까지 다가가는 시간이 꽤 빨라졌다고 생각한다.
+
+그러나 사바사일 것 같다.  
+그래도 신입 때 느꼈던 낯선 느낌은 좀 덜했다!
 
 #### 개발 문화 전파하기
 
